[package]
name = "actix-ratelimit"
version = "0.5.1"
authors = [
    "Palitha Lahiru <palitha.lahiru@gmail.com>"
]
description = "Rate limiter using a fixed window counter for arbitrary keys, backed by Moka in-memory cache for Actix Web"
keywords = ["actix-web", "rate-api", "rate-limit", "limitation", "moka", "ratelimit"]
categories = ["asynchronous", "web-programming"]
repository = "https://github.com/palithalahiru/actix-moka-ratelimit"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["session"]
session = ["actix-session"]

[dependencies]
actix-utils = "3"
actix-web = { version = "4", default-features = false, features = ["cookies"] }

chrono = "0.4"
derive_more = { version = "2", features = ["display", "error", "from"] }
log = "0.4"
moka = { version = "0.12", features = ["future"] }
time = "0.3"

# session
actix-session = { version = "0.11", optional = true }

[dev-dependencies]
actix-web = "4"
static_assertions = "1"
uuid = { version = "1", features = ["v4"] }
